<resources>
    <string name="app_name">Event List App</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home_carousel">Dicoding Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="title_Setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="category">Category</string>
    <string name="title">Event Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="text_city">City</string>
    <string name="available">Available:</string>
    <string name="text_100">100</string>
    <string name="text_150">150</string>
    <string name="registrants">Registrants:</string>
    <string name="quota">Quota:</string>
    <string name="text_250">250</string>
    <string name="availability">Availability</string>
    <string name="start_time">Start Time:</string>
    <string name="begin_time">2024–05–18 10:00:00</string>
    <string name="finish">Finish:</string>
    <string name="descriptions">Descriptions</string>
    <string name="reserve">Reserve</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_favorite">Favorite</string>
    <string name="recommendation_event">Recommendation event for you!</string>
    <string name="title_favorite_event">Favorite Events</string>
    <string name="fullname">Ida Bagus Putu Ryan Paramasatya Putra</string>
    <string name="email">a014b4ky1904@bangkit.academy</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="enable_notification">Enable notification</string>
</resources>