<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/teamwork" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_cover">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_category"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/category"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_city"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    android:text="@string/owner_name"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tv_owner"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/text_city"
                    android:textSize="14sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/rounded_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_header">

                <TextView
                    android:id="@+id/availability_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/availability"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_regis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/availability_header">

                    <TextView
                        android:id="@+id/tv_available_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_available"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/available"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        app:layout_constraintStart_toEndOf="@id/tv_available_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_registrants_text"
                        android:text="@string/text_100"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_registrants_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        app:layout_constraintStart_toEndOf="@+id/tv_available"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/registrants"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_registrants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingEnd="16dp"
                        android:text="@string/text_150"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/tv_quota_text"
                        app:layout_constraintStart_toEndOf="@+id/tv_registrants_text"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_quota_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_registrants"
                        app:layout_constraintEnd_toStartOf="@+id/tv_quota"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/quota"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_quota"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        app:layout_constraintStart_toEndOf="@id/tv_quota_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/text_250"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_availability">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/start_time"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_begin_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time"
                android:text="@string/begin_time"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_finish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_begin_time"
                android:text="@string/finish"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_finish_time"
                android:text="@string/begin_time"
                tools:ignore="RtlSymmetry"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_end_time"
                android:text="@string/descriptions"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description"
                tools:text="@string/descriptions" />

            <Button
                android:id="@+id/buttonReserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="80dp"
                android:paddingVertical="12dp"
                android:text="@string/reserve"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>